# CSI499CapstoneProject

./: README.md
monitor-input-device-client/: Cargo.toml
monitor-input-device-client/doc/: API_For_Server.txt  DBInit.sql  MonitorInputDevice_mysql.sql
monitor-input-device-client/src/: call_remote_server.rs  event_analyse_window.rs  event_view_window.rs  login_window.rs  login_window.ui  main.rs  modify_password_window.rs  modify_password_window.ui  operate_window.rs  register_window.rs  register_window.ui  xor_encrypt.rs
monitor-input-device-server/: Cargo.toml
monitor-input-device-server/src/: main.rs
